[profile.release]
panic = "unwind"
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[workspace]
package.edition = "2021"
package.repository = ""

resolver = "2"
members = [
	"node",
	"pallets/*",
	"runtime",
]
